Update deploy.yml to list dist
css and js missing

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,5 +28,6 @@ jobs:
         with:
           branch: gh-pages
           folder: dist
+          run: ls -R dist  # List all files in dist folder
           token: ${{ secrets.DEPLOY }}
 
